# texas-electrical-pe

./: README.md  pyproject.toml
texas-electrical-pe/applications/lightning_protection/: workspace.ipynb
texas-electrical-pe/measurements_instrumentation/ground_resistance_testing/: workspace.ipynb
texas-electrical-pe/measurements_instrumentation/instrument_transformers/: main.py  measuments_instrumentation.ipynb  workspace.ipynb
texas-electrical-pe/measuremetns_instrumentation/: measuments_instrumentation.ipynb
texas_electrical_pe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
texas_electrical_pe/analysis/: workbook.ipynb
texas_electrical_pe/analysis/dc_circuits/: main.py
texas_electrical_pe/analysis/per_unit_system/: main.py
texas_electrical_pe/analysis/phasor_diagrams/: main.py
texas_electrical_pe/analysis/single_phase_circuits/: main.py
texas_electrical_pe/analysis/symmetrical_components/: main.py
texas_electrical_pe/analysis/three_phase_circuit/: main.py
texas_electrical_pe/applications/demand_calculations/: main.py
texas_electrical_pe/applications/energy_management/: main.py
texas_electrical_pe/applications/engineering_economics/: main.py
texas_electrical_pe/applications/grounding/: main.py
texas_electrical_pe/applications/illumination_energy_efficiency/: main.py
texas_electrical_pe/applications/lightning_protection/: main.py
texas_electrical_pe/applications/reliability/: main.py
texas_electrical_pe/applications/surge_protection/: main.py  workspace.ipynb
(+4 files in other folders)
